// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component Actions border 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__action mdl-card--border\\">
    Some text
  </div>
</div>"
`;

exports[`Card Component Actions expand 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__action mdl-card--expand\\">
    Some text
  </div>
</div>"
`;

exports[`Card Component Actions plain 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__action\\">
    Some text
  </div>
</div>"
`;

exports[`Card Component Media border 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__media mdl-card--border\\">
    <img src=\\"#\\">
  </div>
</div>"
`;

exports[`Card Component Media expand 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__media mdl-card--expand\\">
    <img src=\\"#\\">
  </div>
</div>"
`;

exports[`Card Component Media non object 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__media\\">
    <img src=\\"#\\">
  </div>
</div>"
`;

exports[`Card Component Supporting Text border 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__supporting-text mdl-card--border\\">
    Some text
  </div>
</div>"
`;

exports[`Card Component Supporting Text expand 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__supporting-text mdl-card--expand\\">
    Some text
  </div>
</div>"
`;

exports[`Card Component Supporting Text plain 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__supporting-text\\">
    Some text
  </div>
</div>"
`;

exports[`Card Component Title border 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__title mdl-card--border\\">
    <h2 class=\\"mdl-card__title-text\\">
      Title
    </h2>
  </div>
</div>"
`;

exports[`Card Component Title children 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__title\\">
    <div>
      test
    </div>
  </div>
</div>"
`;

exports[`Card Component Title expand 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__title mdl-card--expand\\">
    <h2 class=\\"mdl-card__title-text\\">
      Title
    </h2>
  </div>
</div>"
`;

exports[`Card Component Title string title 1`] = `
"<div class=\\"mdl-card\\">
  <div class=\\"mdl-card__title\\">
    <h2 class=\\"mdl-card__title-text\\">
      Title
    </h2>
  </div>
</div>"
`;

exports[`Card Component no options 1`] = `"<div class=\\"mdl-card\\"></div>"`;

exports[`Card Component shadows shadow 2dp 1`] = `"<div class=\\"mdl-card mdl-shadow--2dp\\"></div>"`;

exports[`Card Component shadows shadow 3dp 1`] = `"<div class=\\"mdl-card mdl-shadow--3dp\\"></div>"`;

exports[`Card Component shadows shadow 4dp 1`] = `"<div class=\\"mdl-card mdl-shadow--4dp\\"></div>"`;

exports[`Card Component shadows shadow 6dp 1`] = `"<div class=\\"mdl-card mdl-shadow--6dp\\"></div>"`;

exports[`Card Component shadows shadow 8dp 1`] = `"<div class=\\"mdl-card mdl-shadow--8dp\\"></div>"`;

exports[`Card Component shadows shadow 16dp 1`] = `"<div class=\\"mdl-card mdl-shadow--16dp\\"></div>"`;
